--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.BeyondBarriersMart"
         tools:targetApi="31">
         <activity
+            android:name=".SpendingChartActivity"
+            android:exported="false"
+            android:label="@string/title_activity_spending_chart"
+            android:theme="@style/Theme.BeyondBarriersMart.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
