--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.BeyondBarriersMart"
         tools:targetApi="31">
         <activity
+            android:name=".MyProductsActivity"
+            android:exported="false" />
+        <activity
             android:name=".SpendingChartActivity"
             android:exported="false"
             android:label="@string/title_activity_spending_chart"
