--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.BeyondBarriersMart"
         tools:targetApi="31">
         <activity
+            android:name=".AddProductsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MyProductsActivity"
             android:exported="false" />
         <activity
@@ -31,4 +34,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
