--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:label="@string/title_activity_spending_chart"
             android:theme="@style/Theme.BeyondBarriersMart.NoActionBar" />
         <activity
+            android:name=".CategoryActivity"
+            android:exported="false"
+            android:label="CategoryActivity"
+            android:theme="@style/Theme.BeyondBarriersMart.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
