--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.BeyondBarriersMart"
         tools:targetApi="31">
         <activity
+            android:name=".SellerProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BuyerProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
